Fix CSS for cancel button on smaller screens

--- a/src/less/auth-overlay.less
+++ b/src/less/auth-overlay.less
@@ -10,6 +10,8 @@
 
 .gpLoginCancelIframe {
   z-index: 5001;
+  position: absolute;
+  right: 0px;
 }
 
 .gpLoginWindow {
